# manim-mcp

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
assets/benchmark_results/: benchmark_1769894223.json  benchmark_1769895584.json  benchmark_1769896743.json  benchmark_1769896800.json  benchmark_1769897123.json  benchmark_1769897919.json
data/chromadb/17213600-944f-4f66-86e3-894a046a38f9/: index_metadata.pickle
data/chromadb/8524264e-93e9-4480-94ce-f331ea79f3c6/: index_metadata.pickle
data/chromadb/ec9caa2d-7940-46d2-9727-b3f717904b39/: index_metadata.pickle
manim_mcp/: __init__.py  bootstrap.py  config.py  exceptions.py  models.py
manim_mcp/agents/: code_generator.py  code_reviewer.py  concept_analyzer.py  orchestrator.py  scene_planner.py
manim_mcp/cli/: __init__.py  __main__.py  agent.py  api_extractor.py  indexer.py  output.py  pattern_extractor.py  tools_schema.py
manim_mcp/core/: api_graph.py  code_bridge.py  embeddings.py  layout_validator.py  linter.py  llm.py  model_router.py  param_validator.py  pipeline.py  probe_search.py  rag.py  renderer.py  sandbox.py  scene_parser.py  schema_generator.py  self_critique.py  storage.py  template_generator.py  tracker.py  tts.py
manim_mcp/prompts/: __init__.py  code_generator.md  code_reviewer.md  edit_system.md  fix_system.md  generate_base.md  latex_instructions.md  latex_patterns.md  no_latex_instructions.md  scene_planner.md  schema_generator_narration.md  schema_generator_system.md  self_critique_fix.md  self_critique_system.md  self_critique_verify.md  template_color_section.md  template_step_section.md  tts_narration_fallback.md  tts_narration_from_code.md  tts_narration_script.md
manim_mcp/tools/: generate.py  manage.py  rag.py
scripts/: benchmark_providers.py  index_components.py  index_helpers.py  index_series.py  test_providers.py  test_providers.sh
src/manim_mcp/: bootstrap.py  config.py  exceptions.py  models.py  server.py
src/manim_mcp/agents/: __init__.py  base.py  code_generator.py  code_reviewer.py  concept_analyzer.py  orchestrator.py  scene_planner.py
src/manim_mcp/cli/: __init__.py  api_extractor.py  commands.py  indexer.py  pattern_extractor.py
src/manim_mcp/core/: code_bridge.py  llm.py  param_validator.py  pipeline.py  quality.py  rag.py  renderer.py  tts.py
src/manim_mcp/prompts/: code_generator.md  code_reviewer.md  concept_analyzer.md  fix_system.md  generate_base.md  latex_patterns.md  no_latex_patterns.md
src/manim_mcp/tools/: __init__.py  generate.py  manage.py
tests/: conftest.py  test_e2e.py  test_pipeline.py  test_renderer.py  test_sandbox.py  test_scene_parser.py  test_storage.py  test_tools.py  test_tracker.py
