[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manim_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/manim_mcp",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel.sources]
"manim_mcp" = "manim_mcp"

[project]
name = "manim-mcp"
version = "0.1.0"
description = "Text-to-video animation powered by manimgl and multi-agent LLM pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Paul Negedu", email = "support@trylink.tech" }
]
keywords = ["manim", "animation", "mcp", "llm", "video", "3blue1brown", "math"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.28.0",
    "aiosqlite>=0.19.0",
    "google-genai>=1.0.0",
    "pydub>=0.25.0",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/paulnegz/manim-mcp"
Repository = "https://github.com/paulnegz/manim-mcp"
Documentation = "https://github.com/paulnegz/manim-mcp#readme"

[project.scripts]
manim-mcp = "manim_mcp.cli:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "moto[s3]>=5.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "python-dotenv>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
claude = [
    "anthropic>=0.40.0",
]
deepseek = [
    "openai>=1.0.0",
]
all = [
    "manim-mcp[rag,claude,deepseek]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
